--- a/src/Components/ExtenedDetails/ExtenedDetails.css
+++ b/src/Components/ExtenedDetails/ExtenedDetails.css
@@ -1,26 +1,89 @@
 .details-bg{
     background-image: url('../../Photo/awseme-covered-football-stadium-website-header.jpg');
-    background-size: 100% 250px;
+    
+}
+@media (min-width:641px)  { 
+    .details-bg{
+        background-size: 100% 250px;
    text-align: center;
    background-repeat: no-repeat;
-}
-.details-bg img{
+    }
+    .details-bg img{
     width: 200px;
 }
-*{
-    margin: 0;
-    padding: 0;
-}
+
 .cardStyle{
     display: grid;
         grid-template-columns: repeat(2 , 1fr);
         background-color:chocolate;
+        width: 90%;
+        justify-content: space-evenly;
+        align-items: center;
+        font-family: "Times New Roman", Times, serif;
        
 }
+.extenedStyle .cardStyle img{
+    width: 20px;
+    
+}
+
+
+ }
+
+ @media (min-width:320px)  { 
+    .details-bg{
+        background-size: 100% 100%;
+   text-align: center;
+   background-repeat: no-repeat;
+    }
+    .details-bg img{
+        width: 150px;
+        padding: 20px;
+    }
+    .cardStyle{
+        grid-template-columns: repeat(1,1fr);
+        background-color:chocolate;
+    }
+    .extenedStyle .cardStyle img{
+        width: 10px;
+        
+    }
+ }
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+   
+}
+
 .extenedStyle{
     background-color: rgba(30, 30, 155, 0.5);
-     padding-left: 50px;
-        padding-right: 50px;
+        padding-left: 80px;
+        padding-right: 80px;
         padding-top: 10px;
         padding-bottom: 10px;
+        
+}
+
+.cardStyle{
+    color: white;
+    padding: 20px;
+    border-radius: 20px;
+    margin: 10px;
+    padding: 10px;
+}
+.extenedStyle .cardStyle .genderImg img{
+    width: 80%;
+    justify-content: flex-end;
+    align-content: flex-end;
+}
+.social-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.social-icon img{
+    width: 60px;
 }
