--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,8 +1,7 @@
 .body-style{
      background-image: url('../Photo/awseme-covered-football-stadium-website-header.jpg');
-     background-size: 100% 250px;
-    text-align: center;
-    background-repeat: no-repeat;
+     
+   
 }
 *{
     margin: 0;
@@ -14,4 +13,20 @@
     text-shadow: 2px 2px 2px gray;
     font-family: "Times New Roman", Times, serif;
     font-weight: bolder;
+}
+@media (min-width:320px)  {
+    .body-style{
+        background-size: 100% 100%;
+        text-align: center;
+        background-repeat: no-repeat;
+    }
+    .body-style h2{
+        padding: 70px;
+    }
+}
+@media (min-width : 641px){
+    .body-style{
+        background-size: 100% 250px;
+         
+    }
 }
