--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,10 +1,27 @@
-.main{
-        display: grid;
-        grid-template-columns: repeat(3 , 1fr);
-        background-color: rgba(30, 30, 155, 0.5);
-        padding-left: 50px;
-        padding-right: 50px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        
+@media (min-width:320px) {
+        .main {
+                grid-template-columns: repeat(1, 1fr);
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-top: 20px;
+                padding-bottom: 20px;
+
+        }
+}
+
+@media (min-width:641px) {
+        .main {
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                padding-left: 50px;
+                padding-right: 50px;
+                padding-top: 20px;
+                padding-bottom: 20px;
+                
+
+        }
+}
+
+.main {
+     background-color: rgba(30, 30, 155, 0.5);   
 }
