--- a/src/Components/ExtenedDetails/ExtenedDetails.css
+++ b/src/Components/ExtenedDetails/ExtenedDetails.css
@@ -1,63 +1,83 @@
-.details-bg{
-    background-image: url('../../Photo/awseme-covered-football-stadium-website-header.jpg');
-    
-}
-@media (min-width:641px)  { 
-    .details-bg{
-        background-size: 100% 250px;
-   text-align: center;
-   background-repeat: no-repeat;
-    }
-    .details-bg img{
-    width: 200px;
-}
-
-.cardStyle{
-    display: grid;
-        grid-template-columns: repeat(2 , 1fr);
-        background-color:chocolate;
-        width: 90%;
-        justify-content: space-evenly;
-        align-items: center;
-        font-family: "Times New Roman", Times, serif;
-       
-}
-.extenedStyle .cardStyle img{
-    width: 20px;
-    
-}
-
-
- }
-
- @media (min-width:320px)  { 
-    .details-bg{
-        background-size: 100% 100%;
-   text-align: center;
-   background-repeat: no-repeat;
-    }
-    .details-bg img{
-        width: 150px;
-        padding: 20px;
-    }
-    .cardStyle{
-        grid-template-columns: repeat(1,1fr);
-        background-color:chocolate;
-    }
-    .extenedStyle .cardStyle img{
-        width: 10px;
-        
-    }
- }
-
-
-
 *{
     margin: 0;
     padding: 0;
    
 }
 
+.details-bg{
+    background-image: url('../../Photo/awseme-covered-football-stadium-website-header.jpg');
+    
+}
+
+ @media (min-width:320px)  { 
+    .details-bg{
+    background-size: 100% 100%;
+    text-align: center;
+    background-repeat: no-repeat;
+    }
+    .details-bg img{
+        width: 200px;
+    }
+    .extenedStyle{
+        background-color: rgba(30, 30, 155, 0.5);
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            font-family: "Times New Roman", Times, serif;
+            
+    }
+    .extenedStyle .cardStyle{
+        display: grid;
+       grid-template-columns: repeat(1 , 1fr);
+       background-color:chocolate;
+       width: 100%;
+       align-items: center;
+       
+       color: white;
+       border-radius: 5px;
+       margin: 2px;
+       padding: 2px;
+       align-items: center;
+       justify-content: center;
+      
+}
+.extenedStyle .cardStyle img{
+    width: 15px;
+    
+}
+.extenedStyle .cardStyle .genderImg img{
+    width: 100%;
+}
+.social-icon{
+    margin:20px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.social-icon a{
+    width: 50px;
+    height: 50px;
+   
+}
+ }
+
+
+
+
+
+
+
+ @media (min-width:641px)  { 
+    .details-bg{
+        background-size: 100% 300px;
+    text-align: center;
+    background-repeat: no-repeat;
+    }
+    .details-bg img{
+    width: 200px;
+}
 .extenedStyle{
     background-color: rgba(30, 30, 155, 0.5);
         padding-left: 80px;
@@ -67,23 +87,56 @@
         
 }
 
-.cardStyle{
-    color: white;
-    padding: 20px;
-    border-radius: 20px;
-    margin: 10px;
-    padding: 10px;
+.extenedStyle .cardStyle{
+         display: grid;
+        grid-template-columns: repeat(2 , 1fr);
+        background-color:chocolate;
+        width: 90%;
+        align-items: center;
+        font-family: "Times New Roman", Times, serif;
+        color: white;
+        padding: 20px;
+        border-radius: 20px;
+        margin: 10px;
+        padding: 10px;
+       
+}
+.extenedStyle .cardStyle img{
+    width: 15px;
+    
 }
 .extenedStyle .cardStyle .genderImg img{
-    width: 80%;
-    justify-content: flex-end;
-    align-content: flex-end;
+    width: 90%;
 }
+/* social down icons */
+
 .social-icon{
+    margin:20px;
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.social-icon img{
-    width: 60px;
+.social-icon a{
+    width: 50px;
+    height: 50px;
+   
 }
+
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
