--- a/src/Components/Leauge/Leauge.css
+++ b/src/Components/Leauge/Leauge.css
@@ -6,7 +6,13 @@
     justify-content: center;
     text-align: center;
     border-radius: 10px;
+    transition: 0.5s;
 }
 .leauge img{
     width: 200px;
+}
+.leauge:hover{
+    background-color: rgba(7, 34, 34, 0.646);
+  color: white;
+  
 }
